--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,21 @@
     "es2021": true
   },
   "extends": ["plugin:react/recommended", "airbnb"],
-  "eslint linebgreak-style": ["error,unix"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectExpression": { "consistent": true, "multiline": true },
+        "ObjectPattern": { "consistent": true, "multiline": true },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+      }
+    ]
+  }
 }
